tests/expectations/compiler/array/array_concat_type_mismatch_fail.out
Error [ETYC0372177]: Cannot concatenate arrays with different element types: `u32` and `u8`.
    --> compiler-test:5:16
     |
   5 |         return a + b;
     |                ^^^^^
     |
     = Both arrays must have the same element type for concatenation.
